third_party/llvm-project/flang/test/Semantics/resolve03.f90
! RUN: %python %S/test_errors.py %s %flang_fc1
implicit none
integer :: x
!ERROR: No explicit type declared for 'y'
y = x
end
